be/src/common/object-pool.h
@@ -35,8 +35,8 @@ class ObjectPool {
 
   template <class T>
   T* Add(T* t) {
-    /// Create the object to be pushed to the shared vector outside the critical section.
-    /// TODO: Consider using a lock-free structure.
+    // Create the object to be pushed to the shared vector outside the critical section.
+    // TODO: Consider using a lock-free structure.
     SpecificElement<T>* obj = new SpecificElement<T>(t);
     DCHECK(obj != NULL);
     boost::lock_guard<SpinLock> l(lock_);
